fixed up header for pages to give a background image and a cutoff look like Velocity

--- a/_sass/_page-sections.scss
+++ b/_sass/_page-sections.scss
@@ -1,3 +1,13 @@
+.page-background {
+  position: absolute;
+  width: 100%;
+  top: 0;
+  left: 0;
+  height: 400px;
+  background: $brand-primary;
+  @include background-cover();
+}
+
 .page-section {
 
   @include background-cover();
@@ -56,6 +66,7 @@
 
   &.page-header {
 
+    color: white;
     justify-content: center;
     padding-bottom: 400px;
     margin-bottom: -450px;
@@ -73,10 +84,18 @@
       max-width: 800px !important;
       text-align: left !important;
       .content {
-        padding: 60px;
+        padding: 60px 60px 0;
         background: $brand-white;
         width: 100%;
         border-radius: $border-radius;
+        blockquote p {
+          border-left: 3px solid $brand-primary;
+          padding: 0 20px;
+          margin: 20px;
+          font-size: 120%;
+          font-style: italic;
+          @extend .text-muted;
+        }
       }
     }
   }
